--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 .flex{
     display: inline-flex;
 }
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item {
+    width: 30%; /* 3つの要素を横に並べるために幅を設定 */
+    margin: 10px; /* 要素の間に余白を追加 */
+    background-color: #f2f2f2;
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: center;
+}
